# HumanGl-

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake  human.frag  human.vert
src/: Bone.cpp  Bone.hpp  Camera.cpp  Camera.h  Charactere.cpp  Charactere.hpp  Human.hpp  Matrix.cpp  Matrix.h  Renderer.cpp  Renderer.hpp  Vec3.cpp  Vec3.h  env.cpp  env.hpp  main.cpp
